fixed uneven header spacing on nav

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,8 +2,8 @@
   background: lightseagreen;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 1rem 1.5rem;
+  align-items: baseline;
+  padding: 0.7rem 1.5rem 1rem;
   position: fixed;
   top: 0;
   width: 100%;
